--- a/ai_stream/colab_test.ipynb
+++ b/ai_stream/colab_test.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "A simple notebook to test that Colab can be used in schools.\n",
     "\n",
-    "From the menu bar at the top, select ```Runtime``` then ```Run all```.\n",
+    "From the menu bar at the top, select ```Runtime``` then ```Run all```. A warning message will pop up because the notebook was not authored by Google, select \"Run anyway\".\n",
     "\n",
     "Does the output below show today's date?"
    ]
@@ -66,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
