Added note about warning message.

--- a/ai_stream/colab_test.ipynb
+++ b/ai_stream/colab_test.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "A simple notebook to test that Colab can be used in schools.\n",
     "\n",
-    "From the menu bar at the top, select ```Runtime``` then ```Run all```. A warning message will pop up because the notebook was not authored by Google, select \"Run anyway\".\n",
+    "From the menu bar at the top, select ```Runtime``` then ```Run all```. A warning message will pop up because the notebook was not authored by Google, select \"RUN ANYWAY\".\n",
     "\n",
     "Does the output below show today's date?"
    ]
