--- a/ai_stream/colab_intro.ipynb
+++ b/ai_stream/colab_intro.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Colab, from Google, is a website where you can write and run Python code. We will use it later to run a machine learning model.\n",
     "\n",
-    "This page is called a Colab notebook. \n",
+    "This page is called a Colab notebook. Hit the menu button on the left sidebar to show the notebook's table of contents.\n",
     "\n",
     "A notebook has different sections, called cells. If you click around this notebook you will see different cells being highlighted with a border."
    ]
@@ -305,13 +305,6 @@
     "Images: Pixabay license. Free for commercial use. No attribution required. \n",
     "https://pixabay.com"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -330,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
