Added note about GPU and table of contents.

--- a/ai_stream/colab_intro.ipynb
+++ b/ai_stream/colab_intro.ipynb
@@ -288,6 +288,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# GPU\n",
+    "Colab can run code on a CPU (Central Processing Unit) or a GPU (Graphics Processing Unit). Large machine learning models can run faster on a GPU. In the next coding activity, if you find that your neural network is taking a long time to train, go to **Runtime** then **Change runtime type** and, under **Hardware accelerator**, select **GPU**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![Pocket watch](images/pocket-watch-1637396_1920.jpg \"Pocket watch on sand\")\n",
     "<!---\n",
     "Pixabay license. Free for commercial use. No attribution required.\n",
