Tidied up CNN notebook

--- a/ai_stream/extra_resources/cnn_handwritten_numbers.ipynb
+++ b/ai_stream/extra_resources/cnn_handwritten_numbers.ipynb
@@ -2,13 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "formed-burton",
+   "metadata": {},
+   "source": [
+    "![Inspire logo](../images/inspire_logo.png \"Inspire logo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "destroyed-biotechnology",
    "metadata": {},
    "source": [
-    "# Inspire programme summer 2021\n",
+    "# Inspire | Summer 2021\n",
+    "## CNN for handwritten number recognition\n",
     "\n",
-    "## TODO \n",
-    "+ TODO remove this list before release\n"
+    "Using this notebook, we will train a convolutional neural network (CNN) to recognise handwritten numbers."
    ]
   },
   {
@@ -22,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "foreign-cathedral",
    "metadata": {},
    "outputs": [],
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "minimal-andrews",
    "metadata": {},
    "outputs": [],
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "molecular-phone",
    "metadata": {},
    "outputs": [],
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "beautiful-alcohol",
    "metadata": {},
    "outputs": [],
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "circular-paris",
    "metadata": {},
    "outputs": [],
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "arbitrary-advocate",
    "metadata": {},
    "outputs": [],
@@ -183,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "interracial-hobby",
    "metadata": {},
    "outputs": [
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "legal-technician",
    "metadata": {},
    "outputs": [],
@@ -235,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "separate-recorder",
    "metadata": {},
    "outputs": [],
@@ -254,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "previous-hundred",
    "metadata": {},
    "outputs": [],
@@ -275,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "useful-profile",
    "metadata": {},
    "outputs": [
@@ -322,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "spectacular-hormone",
    "metadata": {},
    "outputs": [
@@ -331,20 +339,20 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "422/422 [==============================] - 33s 77ms/step - loss: 0.7413 - accuracy: 0.7775 - val_loss: 0.0978 - val_accuracy: 0.9728\n",
+      "422/422 [==============================] - 35s 82ms/step - loss: 0.7506 - accuracy: 0.7600 - val_loss: 0.1039 - val_accuracy: 0.9682\n",
       "Epoch 2/3\n",
-      "422/422 [==============================] - 32s 76ms/step - loss: 0.1177 - accuracy: 0.9646 - val_loss: 0.0644 - val_accuracy: 0.9802\n",
+      "422/422 [==============================] - 33s 79ms/step - loss: 0.1288 - accuracy: 0.9598 - val_loss: 0.0727 - val_accuracy: 0.9765\n",
       "Epoch 3/3\n",
-      "422/422 [==============================] - 34s 81ms/step - loss: 0.0840 - accuracy: 0.9734 - val_loss: 0.0533 - val_accuracy: 0.9817\n"
+      "422/422 [==============================] - 35s 82ms/step - loss: 0.0929 - accuracy: 0.9715 - val_loss: 0.0569 - val_accuracy: 0.9813\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f5132f28100>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f056c3c9100>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "recovered-chancellor",
    "metadata": {},
    "outputs": [
@@ -378,8 +386,8 @@
      "output_type": "stream",
      "text": [
       "Testing using the validation dataset:\n",
-      "Loss: 0.0532739982008934\n",
-      "Accuracy: 0.9816666841506958\n"
+      "Loss: 0.05685357004404068\n",
+      "Accuracy: 0.981333315372467\n"
      ]
     }
    ],
@@ -400,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "inner-minimum",
    "metadata": {},
    "outputs": [],
