Added note about ignoring the run warning.

--- a/ai_stream/colab_intro.ipynb
+++ b/ai_stream/colab_intro.ipynb
@@ -67,6 +67,8 @@
    "source": [
     "Try it yourself. To run the code in the above cell, select it with a click and then either press the play button to the left of the code, or use the keyboard shortcut 'Shift+Enter'. \n",
     "\n",
+    "A warning message will pop up because the notebook was not authored by Google, select \"RUN ANYWAY\".\n",
+    "\n",
     "Next, try changing the numbers in the cell above. Just click the cell and type and then run the code."
    ]
   },
