TF set seed function updated to support later version.

--- a/ai_stream/handwritten_numbers.ipynb
+++ b/ai_stream/handwritten_numbers.ipynb
@@ -58,13 +58,13 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "import tensorflow\n",
     "from tensorflow import keras\n",
-    "from tensorflow import set_random_seed\n",
     "from tensorflow.keras.datasets import mnist\n",
     "from tensorflow.keras import layers\n",
     "\n",
     "np.random.seed(32)\n",
-    "set_random_seed(99)\n",
+    "tensorflow.compat.v1.set_random_seed(99)\n",
     "pd.set_option(\"max_columns\", 28)"
    ]
   },
@@ -1574,17 +1574,17 @@
      "text": [
       "Train on 54000 samples, validate on 6000 samples\n",
       "Epoch 1/5\n",
-      "54000/54000 [==============================] - 1s 28us/sample - loss: 1.8243 - acc: 0.3174 - val_loss: 1.5535 - val_acc: 0.4198\n",
+      "54000/54000 [==============================] - 1s 27us/sample - loss: 1.8243 - acc: 0.3174 - val_loss: 1.5535 - val_acc: 0.4198\n",
       "Epoch 2/5\n",
-      "54000/54000 [==============================] - 1s 26us/sample - loss: 1.4533 - acc: 0.4705 - val_loss: 1.3780 - val_acc: 0.5178\n",
+      "54000/54000 [==============================] - 1s 27us/sample - loss: 1.4533 - acc: 0.4705 - val_loss: 1.3780 - val_acc: 0.5178\n",
       "Epoch 3/5\n",
-      "54000/54000 [==============================] - 1s 28us/sample - loss: 1.3184 - acc: 0.5338 - val_loss: 1.2654 - val_acc: 0.5423\n",
+      "54000/54000 [==============================] - 1s 25us/sample - loss: 1.3184 - acc: 0.5338 - val_loss: 1.2654 - val_acc: 0.5423\n",
       "Epoch 4/5\n",
-      "54000/54000 [==============================] - 1s 25us/sample - loss: 1.2261 - acc: 0.5749 - val_loss: 1.1982 - val_acc: 0.5787\n",
+      "54000/54000 [==============================] - 1s 26us/sample - loss: 1.2261 - acc: 0.5749 - val_loss: 1.1982 - val_acc: 0.5787\n",
       "Epoch 5/5\n",
-      "54000/54000 [==============================] - 2s 30us/sample - loss: 1.1607 - acc: 0.6060 - val_loss: 1.1405 - val_acc: 0.6108\n",
+      "54000/54000 [==============================] - 2s 28us/sample - loss: 1.1607 - acc: 0.6060 - val_loss: 1.1405 - val_acc: 0.6108\n",
       "\n",
-      "Training complete in 8 seconds\n"
+      "Training complete in 7 seconds\n"
      ]
     }
    ],
