--- a/ai_stream/handwritten_numbers.ipynb
+++ b/ai_stream/handwritten_numbers.ipynb
@@ -1849,9 +1849,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (travis_env)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "travis_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1863,7 +1863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
