Added note about val_accuracy in plot.

--- a/ai_stream/handwritten_numbers.ipynb
+++ b/ai_stream/handwritten_numbers.ipynb
@@ -1597,7 +1597,9 @@
    "id": "stopped-butterfly",
    "metadata": {},
    "source": [
-    "The accuracy of the ANN on the training and validation data was recorded during the training process. It is plotted below. We should see this increase with each training iteration. The maximum value that accuracy can be is 1 (100% accuracy)."
+    "The accuracy of the ANN on the training dataset and validation dataset was recorded during the training process. It is plotted below. We should see this increase with each training iteration. The maximum value that accuracy can be is 1 (100% accuracy).\n",
+    "\n",
+    "The accuracy on the training set is shown as \"accuracy\". The accuracy on the validation set is shown as \"val_accuracy\"."
    ]
   },
   {
